# cpp-profiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: UseMalevrovichProf.cmake
comparison/: CMakeLists.txt  README.md  main.cpp  workload.cpp  workload.h
comparison/gprof/: CMakeLists.txt
comparison/malevrovich/: CMakeLists.txt
comparison/sample/: CMakeLists.txt  main_loop.cpp
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/01_basic/: main.cpp
examples/02_sorting/: main.cpp
examples/03_matrix/: main.cpp
examples/04_string_processing/: main.cpp
libs/malevrovich_prof/: CMakeLists.txt
libs/malevrovich_prof/include/malevrovich_prof/: instrumentation.h  print_profiler.h  profiler.h
libs/malevrovich_prof/src/: instrumentation.cpp  print_profiler.cpp  profiler.cpp
libs/malevrovich_prof/src/detail/: clock.h  table.h
